re PR c++/56395 (ICE, Segmentation fault in tsubst)

PR c++/56395
	* tree.c (strip_typedefs): Strip typedefs from TYPENAME_TYPE template
	args.

From-SVN: r196232